# Computer

./: .gitignore  CMakeLists.txt  README.md
src/: AMDProcessor.cpp  AMDProcessor.h  Computer.cpp  Computer.h  IProcessor.cpp  IProcessor.h  IntelProcessor.cpp  IntelProcessor.h  Storage.cpp  Storage.h  main.cpp
